--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx parcel",
-    "lint": "eslint 'src/**/*.js*'"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "author": "",
   "bugs": {
@@ -28,6 +28,8 @@
     "url": "git+https://github.com/nos/create-nos-dapp.git"
   },
   "dependencies": {
+    "@nosplatform/api-functions": "^0.2.2",
+    "react": "^16.4.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
